fixed overlap svg

--- a/src/client/src/containers/ReviewAndGenerate/styles.module.css
+++ b/src/client/src/containers/ReviewAndGenerate/styles.module.css
@@ -38,6 +38,7 @@ button {
 .buttonContainer {
   display: flex;
   align-items: center;
+  position: relative;
 }
 
 .link {
